--- a/public/success.html
+++ b/public/success.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Signup Form</title>
+    <title> Contact-Form</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
     <link rel="stylesheet" type="text/css" href="style.css">
@@ -19,7 +19,7 @@
 
             <div class="col-md-6 main">
 
-                <h1> Signup Successful</h1>
+                <h1> Information Successful Inserted to the Database...</h1>
 
             </div>
 
